Fixes messages overflow

--- a/src/components/MessagesContainer.scss
+++ b/src/components/MessagesContainer.scss
@@ -6,4 +6,5 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
+	overflow-y: auto;
 }
